--- a/style.css
+++ b/style.css
@@ -144,15 +144,18 @@ nav .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transform: transform 250ms;
 }
 
 nav .container ul{
     display: flex;
     gap: 3rem;
+    transform: transform 250ms;
 }
 
 nav .container ul a{
     padding: 0 0 0.3rem;
+    transform: transform 250ms;
 }
 nav .container ul a.active{
     border-bottom: 6px solid var(--color-primary-variant);
