--- a/style.css
+++ b/style.css
@@ -1115,6 +1115,51 @@ button[type="submit"]:hover{
 
     }
 
+
+
+
+
+
+
+
+    section#contact form button{
+        width: 3.5em;
+        color: white;
+        font-size: 1rem;
+        padding: .5em;
+        
+        
+    }
+    footer .container .enquiry h4{
+        font-size: 1rem;
+    }
+    label{
+        font-size: .8rem;
+    }
+    button[type="submit"]{
+        padding: .2em;
+        font-size: .8rem;
+        width: 20%;
+    }
+    
+    footer .container h4{
+        font-size: 0.8rem;
+    }
+    
+    footer .container ul li a{
+        font-size: .8rem;
+    }
+    footer .container .f4 p {
+        font-size: .9em;
+    }
+    footer .copyrightText .text-gray{
+        font-size: 0.7rem;
+    }
+    footer .copyrightText .text-gray a{
+        font-size: .75rem;
+    }
+    
+
    
 
     
